# lwdee

./: .gitignore  CMakeLists.txt  DemoConfig.h.in  Dockerfile  Makefile  README.md  app.cpp  bishou  bishou.cpp  build.sh  demo.cmake  demo.cpp  demo_test.cpp  dockerbuild.sh  dsc.cmake  edc.cmake  edc.cpp  edc.h  edc2.cpp  matrix  matrix.cpp  matrix.h  terasort.cmake  u22s.sh
dsc/: .gitignore  CMakeLists.txt  DscDcoFactory.cpp  DscDcoFactory.h  app.cpp  readme.txt  services.cpp
dsc/core/: ByteSpan.h  Bytes10.h  CMakeLists.txt  DscConfig.cpp  DscConfig.hpp  File.cpp  NodeConfig.cpp  NodeConfig.hpp  Partition.cpp  Partition.h  Stopwatch.cpp  Stopwatch.h  TeraRecord.hpp  log.cpp  log.hpp
dsc/driver/: CMakeLists.txt  Driver.cpp  Driver.h  TerasortConfig.cpp  TerasortConfig.hpp
dsc/kafka/: CMakeLists.txt  JobManager.hpp  KafkaCallback.cpp  KafkaCallback.hpp  KafkaDCO.cpp  KafkaDCO.h  KafkaJobConsumer.cpp  KafkaJobConsumer.hpp  KafkaTask.cpp  KafkaTask.h  ToMap.cpp  ToMap.h
dsc/kafka-test/: CMakeLists.txt  app.cpp  consumer.cpp  consumer.hpp  kafka.cpp  producer.cpp  readme.txt
dsc/lwdee/: DCO.cpp  DCO.h  DDO.cpp  DDO.h  lwdee.cpp  lwdee.h
dsc/map/: CMakeLists.txt  JobManager.cpp  KafkaCallback.cpp  KafkaJobConsumer.cpp  KafkaJobConsumer.hpp  MapDCO.cpp  MapDCO.h  MapSchedule.cpp  MapSchedule.hpp  Mapper.cpp  Mapper.h  Step1Task.cpp  Step1Task.h  ToReduce copy.cpp  ToReduce.cpp  ToReduce.hpp
dsc/matrix/: LinuxMatrix.cpp  LinuxMatrix.h  cpu.cpp  cpu.h
dsc/producer/: .gitignore  CMakeLists.txt  Dockerfile  app.cpp  docker.sh  dockerbuild.sh
dsc/reduce/: CMakeLists.txt  ReduceDCO.cpp  ReduceDCO.h  Reducer.cpp  Reducer.hpp  Step2Task.cpp  Step2Task.h
dsc/sample/: SampleDCO.h  Step0Task.cpp  Step0Task.h
dsc/test/: app.cpp  chrono.cpp  chufa.cpp  consumer.cpp  endiant.cpp  jsontest.cpp  qsort.cpp  readme.txt  timestamp.cpp  tolower.cpp
edc/: CMakeLists.txt  app.cpp  edc.cpp  harry-potter.txt
edc/core/: ByteSpan.cpp  ByteSpan.h  CMakeLists.txt  MapSerializer.cpp  MapSerializer.h  Partition.h  TuplesSerialzer.cpp  log.cpp
edc/driver/: CMakeLists.txt  Driver.cpp  Driver.h  app.cpp  driver.cpp  driver.h
edc/helper/: Vector.h
edc/lwdee/: CMakeLists.txt  DCO.cpp  DCO.h  DDO.cpp  DDO.h  lwdee.cpp  lwdee.h
edc/worker/: CMakeLists.txt  ResultTask.cpp  ResultTask.h  StageTask.cpp  StageTask.h  Step1Task.cpp  Step1Task.h  Step2Task.cpp  Task.h  worker.cpp
leopard/: .gitignore  CMakeLists.txt  Channel.hpp  Dockerfile  Dockerfile_client  commit.sh  dockerbuild-client.sh  dockerbuild.sh  info.sh  makefile  readme.txt  sources.list  test.md
leopard/antelope/: Antelope.cpp  Antelope.hpp  Lane.cpp  Lane.hpp  LaneClient.cpp  LaneClient.hpp  LaneClients.cpp  LaneClients.hpp  SocketClient.cpp  SocketClient.hpp  TcpRequest.cpp  app.cc  test.cpp  test.hpp  test_dev.cpp  test_dev.hpp  test_input.hpp  test_qps.cpp  test_qps.hpp  testsuspend.cpp  testsuspend.hpp
leopard/client/: Antelope.cpp  Antelope.hpp  ClientSockets.cpp  ClientSockets.hpp  Lane.cpp  Lane.hpp  SocketClient.cpp  SocketClient.hpp  SocketScheduler.cpp  SocketScheduler.hpp  TcpRequest.cpp  TcpRequest.hpp  app.cc  client.cc  client.cpp
leopard/config/: leopard.json  leopard_M40.json  leopard_T420.json  leopard_docker.json  leopard_master.json
leopard/core/: CMakeLists.txt  Exception.hpp  SnowflakeIdGenertor.hpp  Stopwatch.cpp  Stopwatch.hpp  log.cpp  suspend.cpp  suspend.hpp
leopard/doc/: todo.txt  知识整理.txt  错误整理.txt
leopard/leopard/: Leopard.cpp  Leopard.hpp  Runway.cpp  Runway.hpp  app.cc  order.cpp  order.hpp
leopard/net/: BufferStream.cpp  BufferStream.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  ClientSocket.cpp  ClientSocket.hpp  Connection.cpp  Connection.hpp  Connections.cpp  Connections.hpp  Epoll.cpp  Epoll.hpp  IProtocal.cpp  IProtocal.hpp  IRunway.cpp  IRunway.hpp  IRunwayContainer.cpp  IRunwayContainer.hpp  LeopardConfig.cpp  LeopardConfig.hpp  LeopardProtocal.cpp  LeopardProtocal.hpp  Matrix.cpp  Matrix.hpp  Metrix.cpp  Metrix.hpp  ProtocalFactory.cpp  ProtocalFactory.hpp  ProtocalHeader.hpp  Qps.cpp  Qps.hpp  Queue.hpp  SendTask.cpp  SendTask.hpp  SendTaskQueue.cpp  SendTaskQueue.hpp  Socket.cpp  Socket.h  Socket.hpp  (+6 more)
leopard/protocal/: CMakeLists.txt  DefaultProtocal.cpp  DefaultProtocal.hpp  DefaultProtocalClient.cpp  DefaultProtocalHeader.cpp  DefaultProtocalHeader.hpp  DefaultProtocalServer.cpp  DefaultStream.cpp  DefaultStream.hpp  LeopardHeader.cpp  LeopardHeader.hpp  LeopardProtocal.cpp  LeopardProtocal.hpp  LeopardStream.cpp  LeopardStream.hpp  TcpRequest.hpp  TcpResponse.hpp
leopard/scripts/: copy.sh  docker.sh  start.sh  xx.sh
leopard/server/: Leopard.cpp  Leopard.hpp  Runway.cpp  Runway.hpp  TcpResponse.cpp  app.cc  order.cpp  order.hpp
leopard/src/: BufferStream.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  ClientConnection.cpp  ClientConnection.hpp  ClientSocket.hpp  ClientWaitor.cpp  ClientWaitor.hpp  Connection.cpp  Connection.hpp  Epoll.cpp  IProtocal.hpp  LaneClient.cpp  LaneClient.hpp  LaneClients.cpp  LaneClients.hpp  Leopard.cpp  Leopard.hpp  LeopardConfig.cpp  Metrix.cpp  Metrix.hpp  ProtocalFactory.cpp  ProtocalFactory.hpp  Qps.cpp  Queue.hpp  Runway.cpp  Runway.hpp  Socket.cpp  Socket.hpp  enums.hpp
leopard/test-client/: app.cpp  test.cpp  test.hpp  test_dev.cpp  test_input.cpp  test_qps.cpp  testsuspend.cpp
leopard/test-server/: app.cpp  order.cpp  order.hpp
terasort/: .gitignore  CMakeLists.txt  TerasortDCOFactory.cpp  TerasortDCOFactory.h  app.cpp  terasort.cpp  terasort.h
terasort/core/: Bytes10.h  CMakeLists.txt  Exception.cpp  Exception.hpp  MapSerializer.cpp  Partition.cpp  Partition.h  TeraRecord.hpp  TuplesSerialzer.cpp  TuplesSerialzer.h  cjson.hpp  log.cpp
terasort/doc/: conf.js  conf.txt  copy.sh  deploy.sh  docker.sh  mkdir.sh
terasort/driver/: Bytes10.h  CMakeLists.txt  Driver.cpp  Driver.h  TerasortConfig.cpp  TerasortConfig.hpp
terasort/lwdee/: CMakeLists.txt  DCO.cpp  DCO.h  DDO.cpp  DDO.h  lwdee.cpp  (+1 more)
uhconnect/: Benchmark.h  CMakeLists.txt
uhshell/: CMakeLists.txt  shell_cfg.h  shell_port.c  shell_port.h  uhshell.cpp  uhshell.h
(+190 files in other folders)
